# learn-deep-learning

./: Cargo.toml
examples/: auto_diff.rs  data_manipulation.rs  data_preprocessing.rs  linear_algebra.rs  linear_regression.rs  linear_regression_weight_decay.rs  nn_linear_regression.rs  vectorization_speedup.rs
examples/common/: common.rs
src/: lib.rs  linear_model.rs  synthetic_regression_data.rs
the_book/: linear-algebra.ipynb
