[package]
name = "learn-deep-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.0", features = ["cuda"] }
candle-datasets = "0.8.0"
candle-nn = { version = "0.8.0", features = ["cuda"] }
polars = {version = "0.46.0", features = ["lazy", "ndarray"]}
rand = "0.9.0"

[dev-dependencies]
plotpy = "1.10"
